--- a/hcaptcha.html
+++ b/hcaptcha.html
@@ -1,13 +1,19 @@
-<!-- hcaptcha.html -->
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <title>hCaptcha Test</title>
     <script src="[https://js.hcaptcha.com/1/api.js"](https://js.hcaptcha.com/1/api.js") async defer></script>
   </head>
   <body>
-    <div class="h-captcha" data-sitekey="1f3a393c-a226-4c4c-9de6-1e9682d0b9a2" data-callback="onVerify"></div>
+    <div class="h-captcha" data-sitekey="10000000-ffff-ffff-ffff-000000000001" data-callback="onVerify"></div>
     <script>
       function onVerify(token) {
-        window.ReactNativeWebView.postMessage('captcha-token:' + token);
+        if (window.ReactNativeWebView) {
+          window.ReactNativeWebView.postMessage('captcha-token:' + token);
+        } else {
+          document.body.innerHTML += '<p>Token: ' + token + '</p>';
+        }
       }
     </script>
   </body>
