--- a/PRIVACY_POLICY.html
+++ b/PRIVACY_POLICY.html
@@ -5,16 +5,100 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy | Mystical Bible Companion</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 2rem; color: #222; background: #faf9f6; }
-    h1 { color: #3a2e6c; }
-    h2 { color: #4a3d8f; }
-    a { color: #4a3d8f; }
-    section { margin-bottom: 2rem; }
+    body {
+      font-family: 'Segoe UI', 'Arial', sans-serif;
+      margin: 2rem;
+      color: #222;
+      background: linear-gradient(135deg, #f8f5ff 0%, #e3e0fa 40%, #f7f7e8 100%);
+      min-height: 100vh;
+    }
+    .mbc-header {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      margin-bottom: 2rem;
+      background: linear-gradient(90deg, #6e4acc 10%, #ffd700 90%);
+      border-radius: 1.5rem;
+      box-shadow: 0 2px 12px #d6c6ff44;
+      padding: 1.2rem 2rem;
+      justify-content: flex-start;
+    }
+    .mbc-logo {
+      font-size: 2.5rem;
+      filter: drop-shadow(0 0 3px #ffd700cc);
+    }
+    .mbc-title {
+      font-family: 'Georgia', serif;
+      font-size: 2.1rem;
+      font-weight: bold;
+      color: #fffbe6;
+      letter-spacing: 0.06em;
+      text-shadow: 0 2px 8px #4a3d8f88;
+    }
+    h1 {
+      color: #4a3d8f;
+      font-size: 2.2rem;
+      margin-bottom: 0.5rem;
+      letter-spacing: 0.04em;
+      text-shadow: 0 1px 4px #ffd70044;
+    }
+    h2 {
+      color: #6e4acc;
+      margin-top: 2rem;
+      margin-bottom: 0.5rem;
+      font-size: 1.3rem;
+      letter-spacing: 0.02em;
+    }
+    a {
+      color: #6e4acc;
+      text-decoration: underline;
+    }
+    .mbc-date {
+      color: #a48dff;
+      font-style: italic;
+      margin-bottom: 1.5rem;
+    }
+    section {
+      margin-bottom: 2rem;
+      background: #fffbe6cc;
+      border-radius: 1rem;
+      padding: 1.1rem 1.5rem;
+      box-shadow: 0 1px 8px #e6d1ff33;
+    }
+    ul {
+      margin-left: 1.5rem;
+    }
+    .mbc-footer {
+      text-align: center;
+      margin-top: 3rem;
+      color: #4a3d8f;
+      font-size: 1.1rem;
+    }
+    .mbc-footer-icon {
+      font-size: 1.2em;
+      vertical-align: middle;
+    }
+    .mbc-divider {
+      border: none;
+      border-top: 2px dashed #a48dff77;
+      margin: 2rem auto 1rem auto;
+      width: 60%;
+      background: none;
+    }
+    .mbc-footer-link {
+      font-size: 0.95em;
+      color: #6e4acc;
+      margin-top: 0.3rem;
+    }
   </style>
 </head>
 <body>
+  <div class="mbc-header">
+    <span class="mbc-logo">📖✨</span>
+    <span class="mbc-title">Mystical Bible Companion</span>
+  </div>
   <h1>Privacy Policy</h1>
-  <p>Effective Date: April 21, 2025</p>
+  <p class="mbc-date">Effective Date: April 21, 2025</p>
   <section>
     <h2>1. Introduction</h2>
     <p>Mystical Bible Companion ("the App") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, and safeguard your information when you use our app and related services.</p>
@@ -67,5 +151,10 @@
     <h2>9. Contact Us</h2>
     <p>If you have any questions about this Privacy Policy, please contact us at: <a href="mailto:support@mysticalbible.app">support@mysticalbible.app</a></p>
   </section>
+    <footer class="mbc-footer">
+      <hr class="mbc-divider"/>
+      <p>May your path be illuminated by wisdom, peace, and the Light within. <span class="mbc-footer-icon">🌟</span></p>
+      <p class="mbc-footer-link">&copy; 2025 Mystical Bible Companion</p>
+    </footer>
 </body>
 </html>
