--- a/PRIVACY_POLICY.html
+++ b/PRIVACY_POLICY.html
@@ -8,8 +8,8 @@
     body {
       font-family: 'Segoe UI', 'Arial', sans-serif;
       margin: 2rem;
-      color: #222;
-      background: linear-gradient(135deg, #f8f5ff 0%, #e3e0fa 40%, #f7f7e8 100%);
+      color: #2c2156;
+      background: linear-gradient(135deg, #fffbe6 0%, #a48dff 40%, #4a3d8f 100%);
       min-height: 100vh;
     }
     .mbc-header {
@@ -17,9 +17,9 @@
       align-items: center;
       gap: 1rem;
       margin-bottom: 2rem;
-      background: linear-gradient(90deg, #6e4acc 10%, #ffd700 90%);
+      background: linear-gradient(90deg, #4a3d8f 10%, #ffd700 90%);
       border-radius: 1.5rem;
-      box-shadow: 0 2px 12px #d6c6ff44;
+      box-shadow: 0 2px 12px #a48dff44;
       padding: 1.2rem 2rem;
       justify-content: flex-start;
     }
@@ -31,7 +31,7 @@
       font-family: 'Georgia', serif;
       font-size: 2.1rem;
       font-weight: bold;
-      color: #fffbe6;
+      color: #ffd700;
       letter-spacing: 0.06em;
       text-shadow: 0 2px 8px #4a3d8f88;
     }
@@ -43,15 +43,16 @@
       text-shadow: 0 1px 4px #ffd70044;
     }
     h2 {
-      color: #6e4acc;
+      color: #a48dff;
       margin-top: 2rem;
       margin-bottom: 0.5rem;
       font-size: 1.3rem;
       letter-spacing: 0.02em;
     }
     a {
-      color: #6e4acc;
+      color: #ffd700;
       text-decoration: underline;
+      font-weight: bold;
     }
     .mbc-date {
       color: #a48dff;
@@ -60,10 +61,11 @@
     }
     section {
       margin-bottom: 2rem;
-      background: #fffbe6cc;
+      background: #fffbe6ee;
       border-radius: 1rem;
       padding: 1.1rem 1.5rem;
-      box-shadow: 0 1px 8px #e6d1ff33;
+      box-shadow: 0 1px 8px #a48dff33;
+      border-left: 6px solid #4a3d8f;
     }
     ul {
       margin-left: 1.5rem;
@@ -73,6 +75,10 @@
       margin-top: 3rem;
       color: #4a3d8f;
       font-size: 1.1rem;
+      background: linear-gradient(90deg, #fffbe6 0%, #a48dff 100%);
+      border-radius: 1rem;
+      padding: 1.2rem 0.5rem 0.6rem 0.5rem;
+      margin-bottom: 0;
     }
     .mbc-footer-icon {
       font-size: 1.2em;
@@ -80,14 +86,14 @@
     }
     .mbc-divider {
       border: none;
-      border-top: 2px dashed #a48dff77;
+      border-top: 2px dashed #ffd70077;
       margin: 2rem auto 1rem auto;
       width: 60%;
       background: none;
     }
     .mbc-footer-link {
       font-size: 0.95em;
-      color: #6e4acc;
+      color: #4a3d8f;
       margin-top: 0.3rem;
     }
   </style>
@@ -149,7 +155,7 @@
   </section>
   <section>
     <h2>9. Contact Us</h2>
-    <p>If you have any questions about this Privacy Policy, please contact us at: <a href="mailto:support@mysticalbible.app">support@mysticalbible.app</a></p>
+    <p>If you have any questions about this Privacy Policy, please contact us at: <a href="mailto:manny@aialchemist.net">manny@aialchemist.net</a></p>
   </section>
     <footer class="mbc-footer">
       <hr class="mbc-divider"/>
