Update verify-landing.html logo

--- a/verify-landing.html
+++ b/verify-landing.html
@@ -73,7 +73,7 @@
 </head>
 <body>
   <div class="container">
-    <img class="logo" src="https://raw.githubusercontent.com/AIalchemistART/MBC/main/frontend-app/assets/icon.png" alt="Mystical Bible Companion Logo">
+    <img class="logo" src="https://www.dropbox.com/scl/fi/roubr9818ee23wy0ycgs3/ChatGPT-Image-Apr-22-2025-01_06_18-AM2.png?rlkey=2quywh1kmo67qwwap3f0ql1dc&st=k8a2ljls&raw=1" alt="Mystical Bible Companion Logo">
     <h1>Account Verified!</h1>
     <div class="premium">Welcome to Mystical Bible Companion</div>
     <p>Your email has been successfully verified.<br>You're now ready to explore a mystical journey through the Bible!</p>
