Update verify-landing.html line font size/color

--- a/verify-landing.html
+++ b/verify-landing.html
@@ -77,7 +77,7 @@
     <h1>Account Verified!</h1>
     <div class="premium">Welcome to Mystical Bible Companion</div>
     <p class="note">If you are seeing this page, simply open this link on your mobile device with the Mystical Bible Companion app installed. The app should open automatically to complete your password reset.<br>If nothing happens, make sure you have the app installed and try again from your mobile device.<br>If you are on a desktop, please open this email on your phone or tablet.</p>
-    <p style="color:#ffe066;font-size:14px;font-family:serif;margin-top:24px;">Blessings,<br>The Mystical Bible Companion Team</p>
+    <p style="color:#ffd11a;font-size:20px;font-family:serif;margin-top:24px;">Blessings,<br>The Mystical Bible Companion Team</p>
     <p style="color:#bfae66;font-size:12px;font-family:sans-serif;margin-top:16px;">&copy; 2025 Mystical Bible Companion</p>
     <script>
       // Debug message on page
